--- a/static/css/topStyle.css
+++ b/static/css/topStyle.css
@@ -15,6 +15,8 @@
 }
 
 #searchBox {
+	position: relative;
+	left: 110px;
 	height: 20px;
 	width: 800px;
 	margin-left: 20px;
@@ -26,7 +28,9 @@
 }
 
 #searchButton {
-	height: 25px;
+	position: relative;
+	left: 100px;
+	height: 30px;
 	margin-top: 20px;
 	margin-bottom: 20px;
 	margin-right: 20px;
@@ -75,10 +79,10 @@
 
 #signInButton {
 	color: yellow;
-	margin-top: 20px;
+	margin-top: 29px;
 	margin-bottom: 20px;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 100px;
+	margin-right: 0px;
 	float: left;
 }
 #kart {
